--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
