--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
