--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.7.7",
     "react-slider": "^2.0.6",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
